# upkg

./: .gitignore  Cargo.toml  pkgbuild.lua
src/: err_context.rs  git_clone.rs  lua_types.rs  main.rs  sub_path.rs
src/lua/: load_lua.rs  lua_types.rs  mod.rs
src/proto/: git_clone.rs  mod.rs
src/upkg/: download_deps.rs  extract_deps.rs  mod.rs  verify_deps.rs
test-pkg/starship/: 0001-fix-rust-1.89.0-warnings-and-errors-blocking-CI-pipe.patch  0002-fix-git-tests-spawning-an-editor.patch  pkgbuild.lua
